Added some changes in my index.html and added images

--- a/index.html
+++ b/index.html
@@ -25,16 +25,11 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Skills</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    My Project
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Project</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -73,7 +68,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="html.jpg" class="card-img-top" alt="HTML">
+                        <img src="img/html.jpg" class="card-img-top" alt="HTML">
                         <div class="card-body">
                             <h5 class="card-title">HTML</h5>
                         </div>
@@ -81,7 +76,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="CSS.jpg" class="card-img-top" alt="CSS">
+                        <img src="img/CSS.jpg" class="card-img-top" alt="CSS">
                         <div class="card-body">
                             <h5 class="card-title">CSS</h5>
                         </div>
@@ -89,9 +84,27 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="JS.png" class="card-img-top" alt="JS">
+                        <img src="img/JS.png" class="card-img-top" alt="JS">
                         <div class="card-body">
                             <h5 class="card-title">JS</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- My Project Section-->
+    <section id="project" class="py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center mb-4">My Project</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="img/Coming soon.png" class="card-img-top" alt="HTML">
+                        <div class="card-body">
+                            <h5 class="card-title">My Project coming soon</h5>
                         </div>
                     </div>
                 </div>
