changes iamge size

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="col-lg-6">
                     <h2>About Me</h2>
                     <p>Hello! I am a passionate developer with experience in creating amazing web applications. I love to code and build projects that solve real-world problems.</p>
-                    <img src="img/AJ.jpg" alt="About Me" class="img-fluid rounded">
+                    <img src="img/AJ.jpg" alt="About Me" class="profile">
                 </div>
             </div>
         </div>
